Added rate limiting and deleting files
